[package]
name = "MdEditor"
version = "0.1.0"
edition = "2021"
author = "Jack Geraghty"
repository = "https://github.com/jmg049/MdEditor"
license = "MIT"
readme = "./README.MD"


[dependencies]
catppuccin-egui = {path="../egui"}
eframe = "0.26.2"
egui = "0.26.2"
egui-toast = "0.12.1"
egui_commonmark = { version = "0.13.0", features = ["better_syntax_highlighting", "svg", "fetch"] }
egui_file = "0.16.2"
epaint = "0.26.2"
shellexpand = "3.1.0"
thiserror = "1.0.57"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1